--- a/auth/.gitignore
+++ b/auth/.gitignore
@@ -4,6 +4,9 @@ target/
 !**/src/main/**
 !**/src/test/**
 
+### Password ###
+src/main/resources/application.properties
+
 ### STS ###
 .apt_generated
 .classpath
@@ -18,8 +21,6 @@ target/
 *.iws
 *.iml
 *.ipr
-
-*.properties
 
 ### NetBeans ###
 /nbproject/private/
