--- a/auth/src/main/resources/application.properties
+++ b/auth/src/main/resources/application.properties
@@ -23,8 +23,8 @@ server.port = 8083
 
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=xx
-spring.mail.password=xx
+spring.mail.username=xxv
+spring.mail.password=xxv
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
